update autrik name

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const challenges = [
 const partners = [
     { name: "Gravionic GmbH", url: "https://www.gravionic.de" },
     { name: "Deposerv Ingenieursgesellschaft mbH", url: "https://www.deposerv.de" },
-    { name: "Autrik UG", url: "https://www.autrik.com" },
+    { name: "Autrik UG(haftungsbeschränkt)", url: "https://www.autrik.com" },
     { name: "Öko-Institut e.V.", url: "https://www.oeko.de" },
     { name: "Chair of Measurement Technology, Saarland University", url: "https://www.lmt.uni-saarland.de/index.php/de/" }
 ];
